<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <artifactId>fire-project-backend</artifactId>
  <description>Fire Project Backend</description>
  <groupId>es.udc.fireproject</groupId>
  <version>1.0</version>
  <modelVersion>4.0.0</modelVersion>
  <name>Fire Project Backend</name>
  <packaging>jar</packaging>

  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>3.4.13</version>
  </parent>


  <properties>
    <project.base-package>es.udc.fireproject</project.base-package>
    <!-- Versión de Java -->
    <hibernate.version>6.6.13.Final</hibernate.version>
    <jackson-jts.version>2.0.0</jackson-jts.version>

    <!-- Dependencias -->
    <java.version>21</java.version>
    <jjwt.version>0.12.5</jjwt.version>
    <jts.version>1.19.0</jts.version>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <postgis.version>2.5.1</postgis.version>
    <postgresql.version>42.7.3</postgresql.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- Codificación -->
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <testcontainers.version>1.21.1</testcontainers.version>
  </properties>

  <dependencies>
    <!-- Spring Boot Starters -->
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-validation</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-security</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-devtools</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>runtime</scope>
    </dependency>

    <!-- Lombok -->
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>compile</scope>
      <version>1.18.42</version>
    </dependency>

    <!-- Base de datos -->
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
      <version>${postgresql.version}</version>
    </dependency>

    <dependency>
      <artifactId>hibernate-spatial</artifactId>
      <groupId>org.hibernate.orm</groupId>
      <version>${hibernate.version}</version>
    </dependency>

    <dependency>
      <artifactId>postgis-jdbc</artifactId>
      <groupId>net.postgis</groupId>
      <version>${postgis.version}</version>
    </dependency>

    <!-- JSON y Geometría -->
    <dependency>
      <artifactId>jackson-datatype-jts</artifactId>
      <groupId>org.n52.jackson</groupId>
      <version>${jackson-jts.version}</version>
    </dependency>

    <dependency>
      <artifactId>jts-core</artifactId>
      <groupId>org.locationtech.jts</groupId>
      <version>${jts.version}</version>
    </dependency>

    <!-- Seguridad -->
    <dependency>
      <artifactId>jjwt-api</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <version>${jjwt.version}</version>
    </dependency>
    <dependency>
      <artifactId>jjwt-impl</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <scope>runtime</scope>
      <version>${jjwt.version}</version>
    </dependency>
    <dependency>
      <artifactId>jjwt-jackson</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <scope>runtime</scope>
      <version>${jjwt.version}</version>
    </dependency>

    <!-- Testing -->
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-security-test</artifactId>
      <groupId>org.springframework.security</groupId>
      <scope>test</scope>
    </dependency>

    <!-- Testcontainers -->
    <dependency>
      <artifactId>testcontainers</artifactId>
      <groupId>org.testcontainers</groupId>
      <scope>test</scope>
      <version>${testcontainers.version}</version>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter</artifactId>
      <groupId>org.testcontainers</groupId>
      <scope>test</scope>
      <version>${testcontainers.version}</version>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.testcontainers</groupId>
      <scope>test</scope>
      <version>${testcontainers.version}</version>
    </dependency>

    <!-- Springdoc UI para ver el swagger/ui en runtime -->
    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <version>2.8.6</version>
    </dependency>

    <dependency>
      <artifactId>jackson-databind-nullable</artifactId>
      <groupId>org.openapitools</groupId>
      <version>0.2.3</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.openapitools</groupId>
        <artifactId>openapi-generator-maven-plugin</artifactId>
        <version>7.9.0</version>


        <executions>
          <execution>
            <id>generate-openapi</id>
            <goals>
              <goal>generate</goal>
            </goals>
            <phase>generate-sources</phase>

            <configuration>
              <inputSpec>${project.basedir}/src/main/resources/openApi/openApi.yml</inputSpec>
              <apiPackage>${project.base-package}.backend.rest.controllers</apiPackage>
              <modelPackage>${project.base-package}.backend.rest.dtos</modelPackage>

              <generatorName>spring</generatorName>
              <invokerPackage>es.udc.fireproject.backend.rest.invoker</invokerPackage>

              <output>${project.build.directory}/generated-sources/openapi</output>

              <skipOperationExample>true</skipOperationExample>
              <configOptions>
                <dateLibrary>java8</dateLibrary>
                <useSpringBoot3>true</useSpringBoot3>
                <interfaceOnly>true</interfaceOnly>
                <skipDefaultInterface>true</skipDefaultInterface>
                <generateSupportingFiles>false</generateSupportingFiles>

                <additionalModelTypeAnnotations>
                  @com.fasterxml.jackson.annotation.JsonInclude(com.fasterxml.jackson.annotation.JsonInclude.Include.NON_EMPTY)
                </additionalModelTypeAnnotations>
              </configOptions>

              <typeMappings>
                <typeMapping>string+localDateTime=LocalDateTime</typeMapping>
                <typeMapping>string+localDate=LocalDate</typeMapping>
                <typeMapping>string+localTime=LocalTime</typeMapping>
              </typeMappings>
              <schemaMappings>

                <mapping>LocalDateTime=java.time.LocalDateTime</mapping>
                <mapping>LocalDate=java.time.LocalDate</mapping>
                <mapping>LocalTime=java.time.LocalTime</mapping>
              </schemaMappings>

            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <sources>
                <source>${project.build.directory}/generated-sources/openapi/src/main/java</source>
              </sources>
            </configuration>
            <goals>
              <goal>add-source</goal>
            </goals>
            <id>add-generated-sources</id>
            <phase>generate-sources</phase>
          </execution>
        </executions>
        <groupId>org.codehaus.mojo</groupId>
        <version>3.3.0</version>
      </plugin>

      <!-- Plugin de Spring Boot -->
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <groupId>org.springframework.boot</groupId>
      </plugin>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
              <version>1.18.42</version>
            </path>
          </annotationProcessorPaths>
          <release>21</release>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.13.0</version>
      </plugin>

    </plugins>
  </build>

  <repositories>
    <repository>
      <id>projectlombok-snapshots</id>
      <url>https://projectlombok.org/mavenrepo</url>
    </repository>
  </repositories>


</project>
